--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
 <body>
 	<div class="container">
-		<nav class="nav-container collapse">
+		<nav class="nav-container">
 
 			<div class="collapse-btn">
 				<i class="fa-solid fa-square-caret-left"></i>
